--- a/package.json
+++ b/package.json
@@ -8,23 +8,35 @@
   },
   "dependencies": {
     "@next/mdx": "15.1.6",
-    "@tailwindcss/postcss": "^4.0.1",
+    "@radix-ui/react-dialog": "^1.1.5",
+    "@radix-ui/react-icons": "^1.3.2",
+    "@radix-ui/react-navigation-menu": "^1.2.4",
+    "@radix-ui/react-separator": "^1.1.1",
+    "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-tooltip": "^1.1.7",
     "@types/mdx": "^2.0.13",
     "@vercel/analytics": "^1.4.1",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "framer-motion": "^12.0.6",
+    "gray-matter": "^4.0.3",
+    "lucide-react": "^0.474.0",
     "next": "^15.1.6",
     "next-view-transitions": "^0.3.4",
     "postgres": "^3.4.5",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "sugar-high": "^0.7.5"
+    "react-hotkeys-hook": "^4.6.1",
+    "sugar-high": "^0.7.5",
+    "tailwind-merge": "^2.6.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "^22.12.0",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "postcss": "^8.5.1",
-    "tailwindcss": "^4.0.1",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5.7.3"
   }
 }
