--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "delete": "rm -rf app/n"
+    "lint": "next lint",
+    "embeddings": "bun lib/generate-embeddings.ts",
+    "embeddings:refresh": "bun lib/generate-embeddings.ts --refresh"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^1.1.6",
     "@next/mdx": "15.1.6",
     "@radix-ui/react-dialog": "^1.1.5",
     "@radix-ui/react-icons": "^1.3.2",
@@ -14,28 +17,47 @@
     "@radix-ui/react-separator": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.7",
+    "@supabase/supabase-js": "^2.48.1",
     "@types/mdx": "^2.0.13",
     "@vercel/analytics": "^1.4.1",
+    "ai": "^4.1.15",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "common-tags": "^1.8.2",
     "framer-motion": "^12.0.6",
+    "github-slugger": "^2.0.0",
+    "gpt3-tokenizer": "^1.1.5",
     "gray-matter": "^4.0.3",
     "lucide-react": "^0.474.0",
+    "mdast": "^3.0.0",
+    "mdast-util-from-markdown": "^2.0.2",
+    "mdast-util-mdx": "^3.0.0",
+    "mdast-util-to-markdown": "^2.1.2",
+    "mdast-util-to-string": "^4.0.0",
+    "micromark-extension-mdxjs": "^3.0.0",
     "next": "^15.1.6",
     "next-view-transitions": "^0.3.4",
+    "openai": "^4.81.0",
     "postgres": "^3.4.5",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-hotkeys-hook": "^4.6.1",
     "sugar-high": "^0.7.5",
     "tailwind-merge": "^2.6.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "unist-builder": "^4.0.0",
+    "unist-util-filter": "^5.0.1"
   },
   "devDependencies": {
+    "@types/common-tags": "^1.8.4",
+    "@types/estree": "^1.0.6",
+    "@types/mdast": "^4.0.4",
     "@types/node": "^22.12.0",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "dotenv": "^16.4.7",
     "postcss": "^8.5.1",
+    "supabase": "^2.9.6",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.7.3"
   }
