--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "unist-util-filter": "^5.0.1"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.0.0",
     "@types/common-tags": "^1.8.4",
     "@types/estree": "^1.0.6",
     "@types/mdast": "^4.0.4",
@@ -58,7 +59,7 @@
     "dotenv": "^16.4.7",
     "postcss": "^8.5.1",
     "supabase": "^2.9.6",
-    "tailwindcss": "^3.4.17",
+    "tailwindcss": "^4.0.0",
     "typescript": "^5.7.3"
   }
 }
