--- a/package.json
+++ b/package.json
@@ -35,12 +35,14 @@
     "mdast-util-to-string": "^4.0.0",
     "micromark-extension-mdxjs": "^3.0.0",
     "next": "^15.1.6",
+    "next-themes": "^0.4.4",
     "next-view-transitions": "^0.3.4",
     "openai": "^4.81.0",
     "postgres": "^3.4.5",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-hotkeys-hook": "^4.6.1",
+    "sonner": "^1.7.4",
     "sugar-high": "^0.7.5",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
