--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-hotkeys-hook": "^4.6.1",
+    "reactflow": "^11.11.4",
     "sonner": "^1.7.4",
     "sugar-high": "^0.7.5",
     "tailwind-merge": "^2.6.0",
