--- a/package.json
+++ b/package.json
@@ -3,6 +3,13 @@
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
+    "db:generate": "drizzle-kit generate",
+    "db:migrate": "drizzle-kit migrate",
+    "db:drop": "drizzle-kit drop",
+    "db:pull": "drizzle-kit introspect",
+    "db:push": "drizzle-kit push",
+    "db:studio": "drizzle-kit studio",
+    "db:check": "drizzle-kit check",
     "start": "next start",
     "lint": "next lint",
     "embeddings": "bun lib/generate-embeddings.ts",
@@ -10,7 +17,9 @@
   },
   "dependencies": {
     "@ai-sdk/openai": "^1.1.6",
+    "@neondatabase/serverless": "^0.10.4",
     "@next/mdx": "15.1.6",
+    "@paralleldrive/cuid2": "^2.2.2",
     "@radix-ui/react-collapsible": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.5",
     "@radix-ui/react-icons": "^1.3.2",
@@ -18,12 +27,13 @@
     "@radix-ui/react-separator": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.7",
-    "@supabase/supabase-js": "^2.48.1",
     "@vercel/analytics": "^1.4.1",
     "ai": "^4.1.15",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "common-tags": "^1.8.2",
+    "drizzle-orm": "^0.39.1",
+    "drizzle-zod": "^0.7.0",
     "framer-motion": "^12.0.6",
     "github-slugger": "^2.0.0",
     "gpt3-tokenizer": "^1.1.5",
@@ -35,6 +45,7 @@
     "mdast-util-to-markdown": "^2.1.2",
     "mdast-util-to-string": "^4.0.0",
     "micromark-extension-mdxjs": "^3.0.0",
+    "nanoid": "^5.0.9",
     "next": "^15.1.6",
     "next-themes": "^0.4.4",
     "openai": "^4.81.0",
@@ -60,8 +71,8 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "dotenv": "^16.4.7",
+    "drizzle-kit": "^0.30.4",
     "postcss": "^8.5.1",
-    "supabase": "^2.9.6",
     "tailwindcss": "^4.0.0",
     "typescript": "^5.7.3"
   }
