feat(wip): full-text search with pg

--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "react-dom": "19.0.0",
     "react-hotkeys-hook": "^4.6.1",
     "reactflow": "^11.11.4",
+    "server-only": "^0.0.1",
     "sonner": "^1.7.4",
     "sugar-high": "^0.7.5",
     "tailwind-merge": "^2.6.0",
