fix: db connection

--- a/.env.example
+++ b/.env.example
@@ -14,3 +14,5 @@ DATABASE_URL="postgresql://postgres:postgres@localhost:5432/main" # use "db" ins
 
 # Get your key at https://platform.openai.com/account/api-keys
 OPENAI_API_KEY=sk-proj-
+
+NODE_ENV=development
