--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,10 +8,7 @@ services:
     environment:
       NODE_ENV: "production"
       DATABASE_URL: ${DATABASE_URL}
-      SERVERVAR: ${SERVERVAR}
-      CLERK_SECRET_KEY: ${CLERK_SECRET_KEY}
-      NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY: ${NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY}
-      NEXT_PUBLIC_CLIENTVAR: ${NEXT_PUBLIC_CLIENTVAR}
+      OPENAI_API_KEY: ${OPENAI_API_KEY}
     depends_on:
       - db
 
