--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "name": "gellify.dev",
-  "version": "0.0.0",
-  "private": true,
+  "version": "1.0.0",
+  "engines": {
+    "node": "22.x"
+  },
+  "packageManager": "pnpm@9.15.4",
   "scripts": {
     "build": "next build",
     "dev": "next dev --turbo",
